<resources>

    <string name="app_name">ItsMyBike</string>
    <string name="hello_world">Hello world!</string>
    <string name="confirm_bike_deletion">Delete this bike? Cannot undo!</string>
    <string name="registerButton">Register</string>
    <string name="logInButton">Log In</string>
    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="dummy_section_text">dummytext</string>
        <string name="other_dummy_section_text">otherdummytext</string>
        <string name="profile">profile</string>
        <string name="defaultNickname">Nickname</string>
         <string name="defaultSerial">Serial</string>
         <string name = "bikeImage">Your Bike</string>
         <string name = "reportForm1">Use this form to report your bike stolen.</string>
         <string name = "reportForm2">It will then go into our database and be used to show others bike stealing hotspots.</string>
         <string name = "radiocurrentlocation">Use Current Location</string>
         <string name = "radioinputlocation">Select Location on Map</string>
         <string name = "latitude">Latitude</string>
         <string name = "longitude">Longitude</string>
         <string name = "apptitle">It\u0027s My Bike</string>
           <string name = "log_out">Sign Out</string>
            <string name="edit_profile">Edit Profile</string>
            <string name="gps_network_not_enabled">Locations Services Must Be On. Open Location Settings?</string>
            <string name = "open_location_settings">OK</string>
    <string name = "delete_bike">Delete</string>
            <string name = "do_not_open_location_settings">Cancel</string>
    <string name = "do_not_delete_bike">Cancel</string>
            <string name ="location">Location</string>
            <string name ="serial">Serial No.</string>
            <string name ="nicname">Nickname</string>
            <string name = "register_stolen">Register Bike and Location</string>
    <string name="firstNameHint">First Name</string>
    <string name="surnameHint">Surname</string>
    <string name="phoneNumberHint">Phone Number e.g 0871234567</string>
    <string name="title_activity_main">editProfile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="saveProfile">Save</string>
    <string name="bikesHeading">Registered Bikes</string>
    <string name="editPasswordButton">Change Password</string>
    <string name="title_activity_edit_password">EditPassword</string>
    <string name="title_activity_edit_bike">EditBike</string>
    <string name="bikeNicknameHint">Bike Nickname</string>
    <string name="bikeSerialNumberHint">Bike Serial Number</string>
    <string name="title_activity_add_bike">AddBike</string>
    <string name="editBikeMakeHint">Bike make</string>
    <string name="locationHint">Location</string>
    <string name="nicknameLabel">Nickname:</string>
    <string name="serialNumberLabel">Serial No:</string>
    <string name="makeLabel">Make:</string>
    <string name="selectPhotoMethod">Choose to browse gallery for a photo or take photo with camera</string>
    <string name="takePhoto">Camera</string>
    <string name="browse">Gallery</string>
    <string name="title_activity_image_capture">ImageCapture</string>
    <string name="parse_application_id">o6Yb47a9oYQCRb2Lv1MrdFA0E8Op4gIOIR6cKK37</string>
    <string name = "parse_client_key">3I3oXpk4U5O8dfhNvlXwblr0lDJppuk0lVxCINIA</string>
    <string name = "choosebikesHeading">Choose a Bike</string>
      <string name = "chooselocationHeading">Choose a Location</string>
      <string name = "do_not_report_bike">Cancel</string>
      
      <string name = "report_bike">Report</string>
      <string name = "report_message">Are you sure you want to report this bike as stolen?</string>
    
    
     <string name="useLocation">Use Location</string>
    <string name="prompt">Click to Select a Location</string>



</resources>
