<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/background" >

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:id="@+id/scrollView"
    android:layout_alignParentTop="true"
    android:layout_above="@+id/editProfileSaveButton"
    android:fillViewport="false">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/background" >


    <EditText
        android:textColor="@color/textbody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editProfileFirstName"
        android:hint="@string/firstNameHint"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:textColor="@color/textbody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editProfileSurname"
        android:layout_marginTop="40dp"
        android:hint="@string/surnameHint"
        android:layout_below="@+id/editProfileFirstName"
        android:layout_alignStart="@+id/editProfileFirstName" />

        <EditText
            android:textColor="@color/textbody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editProfileLocation"
            android:layout_marginTop="40dp"
            android:hint="@string/locationHint"
            android:layout_below="@+id/editProfileSurname"
            android:layout_alignStart="@+id/editProfileFirstName" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/newPassword"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/editProfileLocation"
            android:textColor="@color/textbody"
            android:layout_alignParentStart="true"
            android:hint="New password" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/retypeNewPassword"
            android:textColor="@color/textbody"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/newPassword"
            android:layout_alignParentStart="true"
            android:hint="Retype new password" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editPasswordButton"
            android:id="@+id/editPasswordButton"
            android:layout_marginTop="40dp"
             android:layout_below="@+id/editProfileLocation"
            android:layout_alignParentStart="true"
            android:onClick="changePassword" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveProfile"
            android:id="@+id/editProfileSaveButton"
            android:onClick="saveProfile"
            android:layout_below="@+id/retypeNewPassword"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true">

        <ImageView
            android:layout_width="180px"
            android:layout_height="180px"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:id="@+id/editProfilePic"
           />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editProfilePic"
                android:layout_alignRight="@+id/editProfilePic"
                android:id="@+id/editProfilePicEditIcon"
                android:clickable="true"
                android:onClick="editProfilePic"
                />
        </RelativeLayout>


    </RelativeLayout>

  </ScrollView>




</RelativeLayout>